2009-12-28  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Ariya Hidayat.

        Fix warnings when generating files using gperf. The warnings are
        currently harmless, but some changes in the build system may make
        them fatal.

        [GTK] Build time must be reduced
        https://bugs.webkit.org/show_bug.cgi?id=32921

        * GNUmakefile.am:

2009-12-28  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Adam Barth.

        [Qt] Fix build break for Qt 4.4
        https://bugs.webkit.org/show_bug.cgi?id=30327

        No new tests, as there is no new functionality.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::clipOut): Use intersected() instead of
        operator &, which was only introduced in Qt version 4.5.

        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::ScrollbarThemeQt::paintScrollCorner): Pass ColorSpace
        argument to fillColor() introduced in r50760

2009-12-28  Kent Tamura  <tkent@chromium.org>

        Reviewed by Maciej Stachowiak.

        Implement HTML5 <article> element.
        https://bugs.webkit.org/show_bug.cgi?id=32936

        <article> should behave the same as <nav> and <section>.

        Test: fast/html/article-element.html

        * css/html.css: Add article as a block element.
        * editing/htmlediting.cpp:
        (WebCore::validBlockTag): Add articleTag.
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::tagPriority): Returns 5 for articleTag.
        (WebCore::blockTagList): Add articleTag.
        * html/HTMLParser.cpp:
        (WebCore::HTMLParser::getNode): Add articleTag.
        * html/HTMLTagNames.in: Add article.

2009-12-27  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Eric Seidel.

        [Qt] Support upload progress events in XMLHttpRequest
        https://bugs.webkit.org/show_bug.cgi?id=32969

        Make QNetworkReplyHandler report the upload progress to the client.
